reverse engineer theme 6 export file